commit edit paging

--- a/src/SPerfAll/sPerf_Web/sPerf_Web.csproj
+++ b/src/SPerfAll/sPerf_Web/sPerf_Web.csproj
@@ -193,12 +193,105 @@
     <Content Include="Areas\Profile\Views\Profile\SeeAll_Archeivement.ascx" />
     <Content Include="Areas\Profile\Views\Profile\StartMenu.ascx" />
     <Content Include="Areas\Profile\Views\Profile\SubMenu.ascx" />
+    <Content Include="Content\Calendar.css" />
+    <Content Include="Content\cartoon\01.jpg" />
+    <Content Include="Content\cartoon\02.jpg" />
+    <Content Include="Content\cartoon\03.jpg" />
+    <Content Include="Content\cartoon\04.jpg" />
+    <Content Include="Content\cartoon\05.jpg" />
+    <Content Include="Content\cartoon\btn_next.gif" />
+    <Content Include="Content\cartoon\btn_prev.gif" />
+    <Content Include="Content\context-menu.css" />
+    <Content Include="Content\docs.css" />
+    <Content Include="Content\drag-drop-folder-tree.css" />
+    <Content Include="Content\HightLight\App1.png" />
+    <Content Include="Content\HightLight\App2.png" />
+    <Content Include="Content\HightLight\App3.png" />
+    <Content Include="Content\HightLight\Cook.png" />
+    <Content Include="Content\HightLight\Math.png" />
+    <Content Include="Content\images\a.JPG" />
+    <Content Include="Content\images\addphoto.JPG" />
+    <Content Include="Content\images\arrows-ffffff.png" />
+    <Content Include="Content\images\arrow_left.gif" />
+    <Content Include="Content\images\arrow_right.gif" />
+    <Content Include="Content\images\avatar.png" />
+    <Content Include="Content\images\banner1_thumb.jpg" />
+    <Content Include="Content\images\banner2_thumb.jpg" />
+    <Content Include="Content\images\banner3_thumb.jpg" />
+    <Content Include="Content\images\banner4.jpg" />
+    <Content Include="Content\images\banner4_thumb.jpg" />
+    <Content Include="Content\images\banner5.jpg" />
+    <Content Include="Content\images\banner5_thumb.jpg" />
+    <Content Include="Content\images\banner6.jpg" />
+    <Content Include="Content\images\banner6_thumb.jpg" />
+    <Content Include="Content\images\bin.png" />
+    <Content Include="Content\images\buttons.gif" />
+    <Content Include="Content\images\calendar.png" />
+    <Content Include="Content\images\context-menu-gradient.gif" />
+    <Content Include="Content\images\demo.png" />
+    <Content Include="Content\images\dhtmlgoodies_folder.gif" />
+    <Content Include="Content\images\dhtmlgoodies_minus.gif" />
+    <Content Include="Content\images\dhtmlgoodies_plus.gif" />
+    <Content Include="Content\images\dhtmlgoodies_sheet.gif" />
+    <Content Include="Content\images\dog.jpg" />
+    <Content Include="Content\images\down.png" />
+    <Content Include="Content\images\dragDrop_ind1.gif" />
+    <Content Include="Content\images\dragDrop_ind2.gif" />
+    <Content Include="Content\images\epstart.png" />
+    <Content Include="Content\images\field.jpg" />
+    <Content Include="Content\images\folder_close.gif" />
+    <Content Include="Content\images\folder_dots.gif" />
+    <Content Include="Content\images\folder_folder.gif" />
+    <Content Include="Content\images\folder_lastsub.gif" />
+    <Content Include="Content\images\folder_open.gif" />
+    <Content Include="Content\images\folder_sub.gif" />
+    <Content Include="Content\images\gnome.jpg" />
+    <Content Include="Content\images\golf.jpg" />
+    <Content Include="Content\images\home_.jpg" />
+    <Content Include="Content\images\LD1.png" />
+    <Content Include="Content\images\LD2.png" />
+    <Content Include="Content\images\LD3.png" />
+    <Content Include="Content\images\leaf.jpg" />
+    <Content Include="Content\images\left.png" />
     <Content Include="Content\images\mayatakky.png" />
+    <Content Include="Content\images\mooeditable-extras-toolbarbuttons-tango.png" />
+    <Content Include="Content\images\mooeditable-toolbarbuttons-silk.png" />
+    <Content Include="Content\images\mooeditable-toolbarbuttons-tango.png" />
+    <Content Include="Content\images\pencils.jpg" />
+    <Content Include="Content\images\river.jpg" />
+    <Content Include="Content\images\sss.JPG" />
+    <Content Include="Content\images\TheS_logo_final.png" />
+    <Content Include="Content\images\toolbar.gif" />
+    <Content Include="Content\images\train.jpg" />
+    <Content Include="Content\images\video.png" />
+    <Content Include="Content\images\VideoPlay.png" />
     <Content Include="Content\jquery-ui.css" />
+    <Content Include="Content\jquery.cleditor.css" />
+    <Content Include="Content\jquery.contextMenu.css" />
     <Content Include="Content\jquery.marquee.css" />
+    <Content Include="Content\jquery.marquee.min.css" />
+    <Content Include="Content\jquery.simplyscroll-1.0.4.css" />
+    <Content Include="Content\jquery.treeview.css" />
+    <Content Include="Content\MooEditable.css" />
+    <Content Include="Content\pagination.css" />
+    <Content Include="Content\smoothDivScroll.css" />
     <Content Include="Content\styles.css" />
     <Content Include="Content\superfish.css" />
     <Content Include="Content\images\Video1.jpg" />
+    <Content Include="Content\TheSStarf\banner1.jpg" />
+    <Content Include="Content\TheSStarf\banner1_thumb.jpg" />
+    <Content Include="Content\TheSStarf\banner2.jpg" />
+    <Content Include="Content\TheSStarf\banner2_thumb.jpg" />
+    <Content Include="Content\TheSStarf\banner3.jpg" />
+    <Content Include="Content\TheSStarf\banner3_thumb.jpg" />
+    <Content Include="Content\TheSStarf\banner4.jpg" />
+    <Content Include="Content\TheSStarf\banner4_thumb.jpg" />
+    <Content Include="Content\TheSStarf\banner5.jpg" />
+    <Content Include="Content\TheSStarf\banner5_thumb.jpg" />
+    <Content Include="Content\TheSStarf\banner6.jpg" />
+    <Content Include="Content\TheSStarf\banner6_thumb.jpg" />
+    <Content Include="Content\thickbox.css" />
+    <Content Include="Scripts\jquery.pagination.js" />
     <Content Include="Scripts\quickpager.jquery.js" />
     <Content Include="uploads\TheS.wmv" />
     <Content Include="club.html" />
@@ -591,6 +684,7 @@
     <Content Include="Views\Home\FAQTutorial.aspx" />
     <Content Include="Views\Home\grobalSearch.ascx" />
     <Content Include="Views\Home\HightLight.aspx" />
+    <Content Include="Views\Home\HomeOption.ascx" />
     <Content Include="Views\Home\Index.aspx" />
     <Content Include="Views\Home\newsBar.ascx" />
     <Content Include="Views\Home\StartMenu.ascx" />
