--- a/src/SPerfAll/sPerf_Web/sPerf_Web.csproj
+++ b/src/SPerfAll/sPerf_Web/sPerf_Web.csproj
@@ -208,6 +208,7 @@
     <Content Include="Content\styles.css" />
     <Content Include="Content\superfish.css" />
     <Content Include="Content\images\Video1.jpg" />
+    <Content Include="Game.html" />
     <Content Include="Scripts\quickpager.jquery.js" />
     <Content Include="uploads\TheS.wmv" />
     <Content Include="club.html" />
