--- a/src/CasinovaAll/Modules/MLN/TheS.Casinova.MLN.Models/TheS.Casinova.MLN.Models.csproj
+++ b/src/CasinovaAll/Modules/MLN/TheS.Casinova.MLN.Models/TheS.Casinova.MLN.Models.csproj
@@ -32,6 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -40,11 +41,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\BonusLogInformation.cs" />
+    <Compile Include="Models\BonusLogInformation.md.cs" />
+    <Compile Include="Models\MLNInformation.cs" />
+    <Compile Include="Models\MLNInformation.md.cs" />
+    <Compile Include="Models\MLNSetting.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\..\Shared\TheS.Casinova.Common.Models\TheS.Casinova.Common.Models.csproj">
       <Project>{6079CFCD-811A-4962-B021-8D3D14C0C45B}</Project>
