Edit ListDownLineBylevelFeature finish
Signed-off-by: Nittaya <nittaya@perfenterprise.com>

--- a/src/CasinovaAll/Modules/MLN/TheS.Casinova.MLN.DAL.Contracts/TheS.Casinova.MLN.DAL.Contracts.csproj
+++ b/src/CasinovaAll/Modules/MLN/TheS.Casinova.MLN.DAL.Contracts/TheS.Casinova.MLN.DAL.Contracts.csproj
@@ -46,6 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Command\ListDownLineByLevel1Command.cs" />
+    <Compile Include="Command\ListDownLineByLevel2Command.cs" />
+    <Compile Include="Command\ListDownLineByLevel3Command.cs" />
     <Compile Include="DAL\IMLNModuleDataQuery.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
